controller unit tests implement